infrastructure/roles/frontend/files/deployment.yaml
# backend/k8s/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    name: frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: frontend
  labels:
    app: frontend
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8080'  
    prometheus.io/path: '/metrics'  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 192.168.1.193:31498/front-login-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP


---
# IngressRoute Traefik
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingress
  namespace: frontend
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`mysternathan.freeboxos.fr`) && PathPrefix(`/`)  
    kind: Rule
    services:
    - name: frontend-service
      port: 80
  tls:
    certResolver: letsencrypt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-carolina
  namespace: frontend
  labels:
    app: frontend-carolina
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8080'  
    prometheus.io/path: '/metrics'  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-carolina
  template:
    metadata:
      labels:
        app: frontend-carolina
    spec:
      containers:
      - name: frontend-carolina
        image: 192.168.1.193:31498/front-carolina:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-carolina-service
  namespace: frontend
  labels:
    app: frontend-carolina
spec:
  selector:
    app: frontend-carolina
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
---
# IngressRoute Traefik
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingress-carolina
  namespace: frontend
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`mysternathan.freeboxos.fr`) && PathPrefix(`/carolina`)  
    kind: Rule
    services:
    - name: frontend-carolina-service
      port: 80
    middlewares:
    - name: strip-carolina-prefix
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-carolina-prefix
  namespace: frontend
spec:
  stripPrefix:
    prefixes:
      - "/carolina"
